# jsASR

./: .gitignore  README.md  dev-environment.yml  environment.yml  pyproject.toml  setup.py
jsASR/: DataGenTimit.py  DataGenTimitTri.py  TimitData.py  TimitLanguage.py  Timit_train_and_eval.py  srA1.py  srA1eval.py  srA1predict.py  srA2.py  srA2predict.py
src/jsASR/: DataGenTimit.py  DataGenTimitTri.py  logging.py  srA1.py  srA1predict.py  srA2.py  srA2predict.py
tests/: Timit_train_and_eval.py  srA1eval.py
